// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > Snapshots > matches active state snapshot 1`] = `
<div
  class="pagination__container"
  data-testid="pagination"
>
  <nav
    aria-label="Pagination"
    class="pagination__nav pagination__nav--size-default"
  >
    <button
      aria-label="Go to previous page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      <span
        class="nav-text"
      >
        Previous
      </span>
    </button>
    <button
      aria-current="page"
      aria-label="Go to page 1"
      class="pagination__item pagination__item--variant-active pagination__item--size-default"
    >
      1
    </button>
    <button
      aria-label="Go to page 2"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      2
    </button>
    <button
      aria-label="Go to page 3"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      3
    </button>
    <button
      aria-label="Go to page 4"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      4
    </button>
    <button
      aria-label="Go to page 5"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      5
    </button>
    <span
      aria-hidden="true"
      class="pagination__item pagination__item--variant-default pagination__item--size-default pagination__item--ellipsis"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
    </span>
    <button
      aria-label="Go to page 10"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      10
    </button>
    <button
      aria-label="Go to next page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
    >
      <span
        class="nav-text"
      >
        Next
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
    <button
      aria-label="Go to last page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
    >
      <span
        class="nav-text"
      >
        Last
      </span>
      <span
        class="nav-text-mobile"
      >
        10
      </span>
    </button>
  </nav>
</div>
`;

exports[`Pagination > Snapshots > matches default snapshot 1`] = `
<div
  class="pagination__container"
  data-testid="pagination"
>
  <nav
    aria-label="Pagination"
    class="pagination__nav pagination__nav--size-default"
  >
    <button
      aria-label="Go to previous page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      <span
        class="nav-text"
      >
        Previous
      </span>
    </button>
    <button
      aria-current="page"
      aria-label="Go to page 1"
      class="pagination__item pagination__item--variant-active pagination__item--size-default"
    >
      1
    </button>
    <button
      aria-label="Go to page 2"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      2
    </button>
    <button
      aria-label="Go to page 3"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      3
    </button>
    <button
      aria-label="Go to page 4"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      4
    </button>
    <button
      aria-label="Go to page 5"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      5
    </button>
    <span
      aria-hidden="true"
      class="pagination__item pagination__item--variant-default pagination__item--size-default pagination__item--ellipsis"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
    </span>
    <button
      aria-label="Go to page 10"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      10
    </button>
    <button
      aria-label="Go to next page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
    >
      <span
        class="nav-text"
      >
        Next
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
    <button
      aria-label="Go to last page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
    >
      <span
        class="nav-text"
      >
        Last
      </span>
      <span
        class="nav-text-mobile"
      >
        10
      </span>
    </button>
  </nav>
</div>
`;

exports[`Pagination > Snapshots > matches disabled state snapshot 1`] = `
<div
  class="pagination__container"
  data-testid="pagination"
>
  <nav
    aria-label="Pagination"
    class="pagination__nav pagination__nav--size-default"
  >
    <button
      aria-label="Go to previous page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      <span
        class="nav-text"
      >
        Previous
      </span>
    </button>
    <button
      aria-current="page"
      aria-label="Go to page 1"
      class="pagination__item pagination__item--variant-active pagination__item--size-default"
      disabled=""
    >
      1
    </button>
    <button
      aria-label="Go to page 2"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      2
    </button>
    <button
      aria-label="Go to page 3"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      3
    </button>
    <button
      aria-label="Go to page 4"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      4
    </button>
    <button
      aria-label="Go to page 5"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      5
    </button>
    <span
      aria-hidden="true"
      class="pagination__item pagination__item--variant-default pagination__item--size-default pagination__item--ellipsis"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
    </span>
    <button
      aria-label="Go to page 10"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      10
    </button>
    <button
      aria-label="Go to next page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <span
        class="nav-text"
      >
        Next
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
    <button
      aria-label="Go to last page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <span
        class="nav-text"
      >
        Last
      </span>
      <span
        class="nav-text-mobile"
      >
        10
      </span>
    </button>
  </nav>
</div>
`;

exports[`Pagination > Snapshots > matches hover state snapshot 1`] = `
<div
  class="pagination__container"
  data-testid="pagination"
>
  <nav
    aria-label="Pagination"
    class="pagination__nav pagination__nav--size-default"
  >
    <button
      aria-label="Go to previous page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      <span
        class="nav-text"
      >
        Previous
      </span>
    </button>
    <button
      aria-current="page"
      aria-label="Go to page 1"
      class="pagination__item pagination__item--variant-active pagination__item--size-default"
    >
      1
    </button>
    <button
      aria-label="Go to page 2"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      2
    </button>
    <button
      aria-label="Go to page 3"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      3
    </button>
    <button
      aria-label="Go to page 4"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      4
    </button>
    <button
      aria-label="Go to page 5"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      5
    </button>
    <span
      aria-hidden="true"
      class="pagination__item pagination__item--variant-default pagination__item--size-default pagination__item--ellipsis"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
    </span>
    <button
      aria-label="Go to page 10"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
    >
      10
    </button>
    <button
      aria-label="Go to next page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
    >
      <span
        class="nav-text"
      >
        Next
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
    <button
      aria-label="Go to last page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
    >
      <span
        class="nav-text"
      >
        Last
      </span>
      <span
        class="nav-text-mobile"
      >
        10
      </span>
    </button>
  </nav>
</div>
`;

exports[`Pagination > Snapshots > matches loading state snapshot 1`] = `
<div
  class="pagination__container"
  data-testid="pagination"
>
  <nav
    aria-label="Pagination"
    class="pagination__nav pagination__nav--size-default"
  >
    <button
      aria-label="Go to previous page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      <span
        class="nav-text"
      >
        Previous
      </span>
    </button>
    <button
      aria-current="page"
      aria-label="Go to page 1"
      class="pagination__item pagination__item--variant-active pagination__item--size-default pagination__item--loading"
      disabled=""
    >
      <div
        class="pagination__spinner"
      />
    </button>
    <button
      aria-label="Go to page 2"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      2
    </button>
    <button
      aria-label="Go to page 3"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      3
    </button>
    <button
      aria-label="Go to page 4"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      4
    </button>
    <button
      aria-label="Go to page 5"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      5
    </button>
    <span
      aria-hidden="true"
      class="pagination__item pagination__item--variant-default pagination__item--size-default pagination__item--ellipsis"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
    </span>
    <button
      aria-label="Go to page 10"
      class="pagination__item pagination__item--variant-default pagination__item--size-default"
      disabled=""
    >
      10
    </button>
    <button
      aria-label="Go to next page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <span
        class="nav-text"
      >
        Next
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
    <button
      aria-label="Go to last page"
      class="pagination__nav-button pagination__nav-button--variant-default pagination__nav-button--size-default"
      disabled=""
    >
      <span
        class="nav-text"
      >
        Last
      </span>
      <span
        class="nav-text-mobile"
      >
        10
      </span>
    </button>
  </nav>
</div>
`;
